# has

./: .gitignore  LICENSE  README.md  Setup.hs  has.cabal
examples/: Announce04.lhs  DefaultParameter.hs  DuckTyping.hs  Points.hs  Time.hs
src/Data/: Has.hs
src/Data/Has/: Engine.hs  Tags.hs  TypeList.hs
test/: Main.hs
