Name:                has
Version:             0.1
Synopsis:            Generic Haskell's Record Accessors
Homepage:            http://github.com/nonowarn/has
License:             BSD3
License-file:        LICENSE
Author:              Yusaku Hashimoto
Maintainer:          Yusaku Hashimoto <nonowarn@gmail.com>
Copyright:           (c) Yusaku Hashimoto 2010
Stability:           Experimental
Category:            Data
Build-type:          Custom
Cabal-version:       >=1.2

Library
  Hs-source-dirs:    src
  Build-depends:     base==4.*

  Exposed-modules:   Data.Has

Flag test
  Description:       Build test program.
  Default:           False

Executable test
  Hs-source-dirs:    src, test
  Main-is:           Main.hs
  if !flag(test)
    Buildable:       False
  if flag(test)
    Build-depends:   HUnit, test-framework, test-framework-hunit
